--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../qr-code-component-main/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <title>QR Code Scanner</title>
 </head>
+
 <body>
     <main>
         <div class="container">
             <div class="qr-code">
-                <img src="../qr-code-component-main/images/image-qr-code.png" alt="">
+                <img src="./images/image-qr-code.png" alt="">
             </div>
             <div>
                 <h2>Improve your front end skills by building Projects</h2>
             </div>
-           <div>
+            <div>
                 <p>Scan the QR code to visit Front End Mentor and take your coding skills to the next level</p>
-           </div>
+            </div>
         </div>
-        <footer>Challenged by <a href="https://www.frontendmentor.io" target="_blank">Front End Mentor</a> Coded by <a href="#">ShinobiKoda</a></footer>
-       
+        <footer>Challenged by <a href="https://www.frontendmentor.io" target="_blank">Front End Mentor</a> Coded by <a
+                href="#">ShinobiKoda</a></footer>
+
     </main>
 </body>
+
 </html>
